--- a/Home.html
+++ b/Home.html
@@ -10,9 +10,11 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="#">Home</a></li>
-            <li> <a href="#">About me</a></li>
-            <li> <a href="#">Contact</a></li>
+            <li> <a href="./Home.html">Home</a></li>
+            <li> <a href="./Resume.html">Resume</a></li>
+            <li> <a href="./GitHub.html">GitHub</a></li>
+            <li> <a href="./Contact.html">Contact</a></li>
+
 
         </ul>
     </nav>
@@ -22,7 +24,7 @@
             <h1 > Hi everyone &#128588;</h1>
             <h2> I am Atha Alghamdi</h2>
             <p >I am a Computer Science graduate from Al-Baha University, graduating with first-class honors. During my studies, I gained extensive knowledge and worked on various projects, which strengthened my technical and problem-solving skills. After graduation, I joined SDAIA’s AI Applications Building Bootcamp, where I deepened my expertise in Python and artificial intelligence. This program was highly valuable, providing me with essential knowledge and hands-on experience. Following that, I enrolled in the Software Development Bootcamp with the Saudi Digital Academy, focusing on Python. In this intensive program, I am committed to honing my skills and striving to become a Full Stack Developer. I look forward to leveraging my expertise to build innovative and impactful solutions in the tech industry.</p>
-                <a id="linkedin" href="http://linkedin.com/in/atha-alghamdi-2b307328b"> LinkedIn</a>
+               
             </div>
         <div class="img1">
             <img src="./4b19af60-d017-4fc4-9e1f-4ded293e4926.jpg" alt="AthaPic" />
