--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
         <div class="Contact-box">
    <p class="Contact-item"><a id="linkedin" href="http://linkedin.com/in/atha-alghamdi-2b307328b">&#xf08c;LinkedIn</a></p> 
     <p><a href="mailto:atha.alghamdi1@gmail.com" class="Contact-item">&#128231;atha.alghamdi1@gmail.com</a></p>
-   <p class="Contact-item">&#xf098;m0530638818</p>
+   <p class="Contact-item">&#xf098;0530638818</p>
 </div>
 </div>
 </body>
