--- a/Resume.html
+++ b/Resume.html
@@ -9,10 +9,12 @@
 
 </head>
 <body id="Resume-page">
-    <div class="container">
-         <embed src="C:\Users\user\Desktop\SDAproject\CV((Atha Alghamdi)).pdf" width="80%" height="800px" type="Applications/pdf":>
-
-    </div>
+    <div id="container-cv">
+         <!-- <iframe src="./Cv Atha.pdf" width="200%" height="1000px" style="border: none;"></iframe> -->
+         <div id="img-resume">
+            <img src="./photo_2025-03-01_19-46-05.jpg" alt="AthaPic" />
+        </div>
+        </div>
 
 </body>
 </html>
